refactor: :recycle: reflect a lot
