# docs/swagger.json
@@ -39,7 +39,17 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/router.JSONResult"
+                        }
+                    }
+                }
             }
         },
         "/clip/{clipId}/tag": {
@@ -70,7 +80,17 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/router.JSONResult"
+                        }
+                    }
+                }
             }
         },
         "/file": {
@@ -125,7 +145,17 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/router.JSONResult"
+                        }
+                    }
+                }
             }
         },
         "/tag": {
@@ -149,7 +179,17 @@
                         }
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/router.JSONResult"
+                        }
+                    }
+                }
             }
         },
         "/video/{videoId}/tag": {
@@ -180,11 +220,34 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/router.JSONResult"
+                        }
+                    }
+                }
             }
         }
     },
     "definitions": {
+        "router.JSONResult": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 400
+                },
+                "data": {},
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "router.addTagForm": {
             "type": "object",
             "required": [
