# internal/router/file.go
@@ -19,11 +19,13 @@ type filesForm struct {
 // @Tags         file
 // @Produce      json
 // @Router       /file [post]
+// @Success 	201	{object} JSONResult{data=int}
+// @Failure 	400 {object} JSONResult
 func AddFile(c *gin.Context) {
 
 	var form filesForm
 	if err := c.Bind(&form); err != nil {
-		c.JSON(400, gin.H{"status": err.Error()})
+		c.JSON(400, JSONResult{Code: 400, Message: err.Error()})
 		return
 	}
 
@@ -33,8 +35,8 @@ func AddFile(c *gin.Context) {
 		file_count += database.AddDir(v)
 	}
 	if file_count == 0 {
-		c.JSON(400, gin.H{"status": "nothing added"})
+		c.JSON(400, JSONResult{Code: 400, Message: "nothing added"})
 		return
 	}
-	c.JSON(201, gin.H{"status": "200", "created": file_count})
+	c.JSON(201, JSONResult{Code: 201, Data: file_count})
 }
